# RestHttp

./: .gitignore  CMakeLists.txt  README.md  asyncrequestor.cpp  asyncrequestor.h  compile.sh  conanfile-linux.txt  conanfile.txt  ioservice.h  main.cpp  requestdata.cpp  requestdata.h  requestor.cpp  requestor.h  responsedata.cpp  responsedata.h
src/: ioservice.h  main.cpp
src/include/request/: asyncrequestor.h  requestdata.h  requestor.h
src/include/response/: responsedata.h
src/request/: asyncrequestor.cpp  requestdata.cpp  requestor.cpp
src/response/: responsedata.cpp
